# src/components/block/block.router.ts
@@ -5,6 +5,7 @@ import {
   readBlockByHash,
   getLatestBlockList,
   readBlockPage,
+  readBlockWithSkip,
 } from '@components/block/block.controller';
 
 const router: Router = Router();
@@ -13,4 +14,5 @@ router.get('/block/number/:number', readBlock);
 router.get('/block/hash/:hash', readBlockByHash);
 router.get('/block/latestBlockList', getLatestBlockList);
 router.get('/block/blockList/:pageNumber', readBlockPage);
+router.get('/block/blockListWithSkip/:skipNum', readBlockWithSkip);
 export default router;
